force-app/main/default/objects/AssignResourse__c/AssignResourse__c.object-meta.xml
<CustomObject>
    <label>Assign Resourse</label>
    <nameField>
        <label>Assign Resourse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assign Resourses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>