force-app/main/default/objects/AssignResourse__c/fields/DailyRate__c.field-meta.xml
<CustomField>
    <fullName>DailyRate__c</fullName>
    <label>Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>