force-app/main/default/objects/AssignResourse__c/fields/InvoiceTemplate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplate__c</fullName>
    <label>Invoice Template</label>
    <referenceTo>InvoiceTemplate__c</referenceTo>
    <relationshipLabel>Assign Resourses</relationshipLabel>
    <relationshipName>Assign_Resourses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>